Fixed other compilation issues